Added a comment on how to use the env file

--- a/rename.env
+++ b/rename.env
@@ -1,2 +1,3 @@
 # Do not share your OpenAI API key with anyone! It should remain a secret.
+# Rename this file to just ".env" after you add your secret API key here
 OPENAI_API_KEY=
